chore(modals): tweak styles to prevent overflow on x-axis on firefox

--- a/src/app/styles/custom-element.styles.scss
+++ b/src/app/styles/custom-element.styles.scss
@@ -180,6 +180,11 @@ a-dynamic-form {
 mat-dialog-container.mat-dialog-container {
     padding: 0;
 
+    mat-dialog-content {
+        margin: 0;
+        padding: 0;
+    }
+
     header {
         display: flex;
         align-items: center;
